--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "berlinmap",
   "private": true,
   "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0",
     "@deck.gl/core": "^7.3.4",
     "@deck.gl/layers": "^7.3.4",
     "@deck.gl/react": "^7.3.4",
     "@turf/turf": "^5.1.6",
+    "d3": "^5.12.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
     "react-map-gl": "^5.1.1",
-    "react-query": "^0.2.1"
+    "react-query": "^0.2.1",
+    "react-scripts": "3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
