--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@deck.gl/layers": "^7.3.4",
     "@deck.gl/react": "^7.3.4",
     "@turf/turf": "^5.1.6",
+    "cheerio": "^1.0.0-rc.3",
     "d3": "^5.12.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
